--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "48935579",
+   "id": "90f4226e",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc6d3562",
+   "id": "ef7483de",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f15a5e0e",
+   "id": "84022134",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e71d77c4",
+   "id": "b2d84e77",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a16108ee",
+   "id": "505d477e",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb80e8e",
+   "id": "72a1fa0c",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2015cf91",
+   "id": "4ed6e8db",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:10:53.294668Z",
-     "iopub.status.busy": "2025-01-27T17:10:53.294242Z",
-     "iopub.status.idle": "2025-01-27T17:10:57.745135Z",
-     "shell.execute_reply": "2025-01-27T17:10:57.744618Z"
+     "iopub.execute_input": "2025-01-27T18:57:08.946711Z",
+     "iopub.status.busy": "2025-01-27T18:57:08.946279Z",
+     "iopub.status.idle": "2025-01-27T18:57:13.708622Z",
+     "shell.execute_reply": "2025-01-27T18:57:13.708045Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8613d304",
+   "id": "acbef296",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99949547",
+   "id": "ec03707f",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4895c47",
+   "id": "b153175e",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "706600ce",
+   "id": "df259f4a",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b3764c9",
+   "id": "2b0bddbf",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471e65cf",
+   "id": "d854bae4",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fbca135",
+   "id": "f876c190",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55130b00",
+   "id": "2b921c02",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "653bc462",
+   "id": "00b9a3bb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:10:57.747429Z",
-     "iopub.status.busy": "2025-01-27T17:10:57.746966Z",
-     "iopub.status.idle": "2025-01-27T17:10:59.759095Z",
-     "shell.execute_reply": "2025-01-27T17:10:59.758579Z"
+     "iopub.execute_input": "2025-01-27T18:57:13.711120Z",
+     "iopub.status.busy": "2025-01-27T18:57:13.710622Z",
+     "iopub.status.idle": "2025-01-27T18:57:15.877190Z",
+     "shell.execute_reply": "2025-01-27T18:57:15.876624Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb9a7ba2",
+   "id": "501a4620",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4983f457",
+   "id": "7c98bf2b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:10:59.761128Z",
-     "iopub.status.busy": "2025-01-27T17:10:59.760777Z",
-     "iopub.status.idle": "2025-01-27T17:10:59.764267Z",
-     "shell.execute_reply": "2025-01-27T17:10:59.763663Z"
+     "iopub.execute_input": "2025-01-27T18:57:15.879376Z",
+     "iopub.status.busy": "2025-01-27T18:57:15.878982Z",
+     "iopub.status.idle": "2025-01-27T18:57:15.882565Z",
+     "shell.execute_reply": "2025-01-27T18:57:15.881854Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38ef8ece",
+   "id": "ac510a15",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e187e60",
+   "id": "31b7c4f9",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d8a5d70",
+   "id": "f6e82b84",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d844a03",
+   "id": "34906189",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2a594632",
+   "id": "baee8202",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:10:59.766076Z",
-     "iopub.status.busy": "2025-01-27T17:10:59.765754Z",
-     "iopub.status.idle": "2025-01-27T17:10:59.811882Z",
-     "shell.execute_reply": "2025-01-27T17:10:59.811338Z"
+     "iopub.execute_input": "2025-01-27T18:57:15.884510Z",
+     "iopub.status.busy": "2025-01-27T18:57:15.884157Z",
+     "iopub.status.idle": "2025-01-27T18:57:15.931791Z",
+     "shell.execute_reply": "2025-01-27T18:57:15.931282Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a31a4a0",
+   "id": "2502090f",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "73645713",
+   "id": "a2a41db0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:10:59.814126Z",
-     "iopub.status.busy": "2025-01-27T17:10:59.813647Z",
-     "iopub.status.idle": "2025-01-27T17:10:59.884782Z",
-     "shell.execute_reply": "2025-01-27T17:10:59.884221Z"
+     "iopub.execute_input": "2025-01-27T18:57:15.933655Z",
+     "iopub.status.busy": "2025-01-27T18:57:15.933468Z",
+     "iopub.status.idle": "2025-01-27T18:57:16.008990Z",
+     "shell.execute_reply": "2025-01-27T18:57:16.008405Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "388e6e54",
+   "id": "4730a4d9",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1562e367",
+   "id": "8a2e8c0d",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "05797f4f",
+   "id": "f6cc2e3e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:10:59.886799Z",
-     "iopub.status.busy": "2025-01-27T17:10:59.886432Z",
-     "iopub.status.idle": "2025-01-27T17:10:59.917094Z",
-     "shell.execute_reply": "2025-01-27T17:10:59.916554Z"
+     "iopub.execute_input": "2025-01-27T18:57:16.011150Z",
+     "iopub.status.busy": "2025-01-27T18:57:16.010777Z",
+     "iopub.status.idle": "2025-01-27T18:57:16.043748Z",
+     "shell.execute_reply": "2025-01-27T18:57:16.043167Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f988669c",
+   "id": "6e689bc3",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e12277a0",
+   "id": "f75ed6a3",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aad4953",
+   "id": "be3a2d18",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2b95244",
+   "id": "db870021",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "980a2607",
+   "id": "e7dcd130",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9a265109",
+   "id": "ddd4bf19",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:10:59.919235Z",
-     "iopub.status.busy": "2025-01-27T17:10:59.918855Z",
-     "iopub.status.idle": "2025-01-27T17:10:59.923038Z",
-     "shell.execute_reply": "2025-01-27T17:10:59.922391Z"
+     "iopub.execute_input": "2025-01-27T18:57:16.045746Z",
+     "iopub.status.busy": "2025-01-27T18:57:16.045553Z",
+     "iopub.status.idle": "2025-01-27T18:57:16.049791Z",
+     "shell.execute_reply": "2025-01-27T18:57:16.049227Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6095a6a",
+   "id": "cc96bcba",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "75c0ffbe",
+   "id": "6153501d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:10:59.924777Z",
-     "iopub.status.busy": "2025-01-27T17:10:59.924431Z",
-     "iopub.status.idle": "2025-01-27T17:10:59.927372Z",
-     "shell.execute_reply": "2025-01-27T17:10:59.926881Z"
+     "iopub.execute_input": "2025-01-27T18:57:16.051813Z",
+     "iopub.status.busy": "2025-01-27T18:57:16.051349Z",
+     "iopub.status.idle": "2025-01-27T18:57:16.054456Z",
+     "shell.execute_reply": "2025-01-27T18:57:16.053943Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d6287fe",
+   "id": "d626d902",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "94e8c4da",
+   "id": "7d5a0b8c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:10:59.929045Z",
-     "iopub.status.busy": "2025-01-27T17:10:59.928717Z",
-     "iopub.status.idle": "2025-01-27T17:11:02.473643Z",
-     "shell.execute_reply": "2025-01-27T17:11:02.473074Z"
+     "iopub.execute_input": "2025-01-27T18:57:16.056297Z",
+     "iopub.status.busy": "2025-01-27T18:57:16.056114Z",
+     "iopub.status.idle": "2025-01-27T18:57:18.741966Z",
+     "shell.execute_reply": "2025-01-27T18:57:18.741327Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c464079",
+   "id": "1b9abc8d",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e86b175",
+   "id": "2585cdfe",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "190bf9f5",
+   "id": "4cd8dfc9",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77448dcd",
+   "id": "51e59798",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ae3b1b8b",
+   "id": "bd366535",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:11:02.475679Z",
-     "iopub.status.busy": "2025-01-27T17:11:02.475306Z",
-     "iopub.status.idle": "2025-01-27T17:11:02.478622Z",
-     "shell.execute_reply": "2025-01-27T17:11:02.478041Z"
+     "iopub.execute_input": "2025-01-27T18:57:18.744114Z",
+     "iopub.status.busy": "2025-01-27T18:57:18.743891Z",
+     "iopub.status.idle": "2025-01-27T18:57:18.747734Z",
+     "shell.execute_reply": "2025-01-27T18:57:18.747130Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f2dc40a7560>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fc058059c60>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b955eb2",
+   "id": "216c6c6b",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba444a7",
+   "id": "601ca40f",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efa122ac",
+   "id": "c1af2808",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a211bb4c",
+   "id": "aea31417",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2a407a1d",
+   "id": "843e98c8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:11:02.480609Z",
-     "iopub.status.busy": "2025-01-27T17:11:02.480184Z",
-     "iopub.status.idle": "2025-01-27T17:11:02.483262Z",
-     "shell.execute_reply": "2025-01-27T17:11:02.482756Z"
+     "iopub.execute_input": "2025-01-27T18:57:18.749598Z",
+     "iopub.status.busy": "2025-01-27T18:57:18.749258Z",
+     "iopub.status.idle": "2025-01-27T18:57:18.752464Z",
+     "shell.execute_reply": "2025-01-27T18:57:18.751761Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b5f214a8",
+   "id": "c74f8f0a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T17:11:02.485044Z",
-     "iopub.status.busy": "2025-01-27T17:11:02.484703Z",
-     "iopub.status.idle": "2025-01-27T17:11:03.531672Z",
-     "shell.execute_reply": "2025-01-27T17:11:03.531118Z"
+     "iopub.execute_input": "2025-01-27T18:57:18.754373Z",
+     "iopub.status.busy": "2025-01-27T18:57:18.753932Z",
+     "iopub.status.idle": "2025-01-27T18:57:19.831360Z",
+     "shell.execute_reply": "2025-01-27T18:57:19.830744Z"
     }
    },
    "outputs": [
